--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.14.0/Sortable.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="bg-gray-100">
+  <!-- アプリケーションコンテナ -->
+  <div id="app-container" class="hidden h-screen">
   <div class="flex flex-col md:flex-row h-screen">
     <!-- メインエリア -->
     <div class="flex flex-col w-full md:w-3/4 p-4">
@@ -95,6 +98,41 @@
       </div>
     </div>
   </div>
+  </div>
+
+  <!-- 認証画面 -->
+  <div id="auth-container" class="min-h-screen flex items-center justify-center p-4">
+    <div class="bg-white rounded-lg shadow-lg p-8 w-full max-w-md">
+      <div class="text-center mb-8">
+        <h2 class="text-2xl font-bold mb-2">タスク管理アプリ</h2>
+        <p class="text-gray-600" id="auth-subtitle">ログインまたはアカウント作成</p>
+      </div>
+
+      <div id="auth-error" class="hidden mb-4 p-3 bg-red-100 text-red-700 rounded"></div>
+      
+      <form id="auth-form">
+        <div class="mb-4">
+          <label for="auth-email" class="block text-sm font-medium text-gray-700 mb-1">メールアドレス</label>
+          <input type="email" id="auth-email" class="w-full p-2 border rounded" required>
+        </div>
+        <div class="mb-6">
+          <label for="auth-password" class="block text-sm font-medium text-gray-700 mb-1">パスワード</label>
+          <input type="password" id="auth-password" class="w-full p-2 border rounded" required>
+        </div>
+        <div class="mb-4">
+          <button type="submit" id="auth-submit" class="w-full bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded">
+            <span id="auth-button-text">ログイン</span>
+          </button>
+        </div>
+      </form>
+
+      <div class="text-center">
+        <button id="toggle-auth-mode" class="text-blue-500 hover:text-blue-700">
+          アカウントをお持ちでない方はこちら
+        </button>
+      </div>
+    </div>
+  </div>
   
   <!-- モーダル: タスク追加/編集 -->
   <div id="task-modal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center">
@@ -168,9 +206,29 @@
     </div>
   </div>
   
+  <!-- ユーザーメニューモーダル -->
+  <div id="user-modal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center">
+    <div class="bg-white rounded-lg p-6 w-full max-w-md">
+      <h3 class="font-bold mb-4">アカウント</h3>
+      <div class="mb-4">
+        <p class="text-sm text-gray-700">ログイン中: <span id="user-email" class="font-medium"></span></p>
+      </div>
+      <div class="flex justify-end space-x-2">
+        <button id="close-user-modal" class="bg-gray-300 hover:bg-gray-400 text-gray-800 py-2 px-4 rounded">
+          キャンセル
+        </button>
+        <button id="logout-button" class="bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded">
+          ログアウト
+        </button>
+      </div>
+    </div>
+  </div>
+
   <!-- JS ファイル -->
   <script src="js/config.js"></script>
   <script src="js/api.js"></script>
+  <script src="js/auth.js"></script>
+  <script src="js/app_auth.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
